コーディング完了（SP版のみ）

--- a/src/index.html
+++ b/src/index.html
@@ -14,11 +14,207 @@
   <link rel="stylesheet" href="./css/style.css">
 </head>
 
-<body class="">
+<body class="p-special">
 
-  <header></header>
-  <main class="l-main">
+  <header>
+    <img src="" alt="">
+  </header>
+  <main class="l-main l-viewport">
+    <article class="p-special-winter">
+      <!-- <picture>
+        <source srcset="./assets/image/mv.png" media="(min-width: 768px)">
+        <img src="./assets/image/mv.png" alt="">
+      </picture> -->
+      <figure class="p-special__mv">
+        <img src="./images/mv.png" alt="冬の撮影キャンペーン、ご成約で選べる10大特典、オンライン相談OK、組数限定＆完全予約制プラン">
+      </figure>
+      <section class="l-wrapper p-special-winter__bg">
+        <div class="l-inner -sm">
+          <h1 class="c-title -lg -tac">
+            <small class="c-title__sub -md">冬にフォトウエディングを<br>挙げる新郎新婦のための</small>
+            <strong class="p-special-winter__title">Winter Campaign</strong>
+          </h1>
 
+          <div class="u-mt--s">
+            <p class="c-text -tac">
+              キャンペーン期間中に<br><u class="u-dotted">新規ご来店</u>or<u class="u-dotted">オンライン相談</u>で<br>
+              ご成約のお客様には<u class="u-underline">選べる豪華特典</u>を<br>
+              ご用意しています。
+            </p>
+          </div>
+
+          <dl class="c-box--border u-mt--l">
+            <dt class="c-box--border__title">対象</dt>
+            <dd class="c-text -tac">
+              <b class="accent big">2月末までにご成約</b>＆<b class="accent big">3/21までの撮影</b>で<br>
+              <b>全データ購入</b>されるお客様
+            </dd>
+          </dl>
+
+          <ul class="l-inner u-mt--m">
+            <li class="c-list--check">組数限定＆完全予約制にて<br>対応させていただいております。</li>
+            <li class="c-list--check">安心のキャンセル料&amp;延期料無料</li>
+          </ul>
+        </div>
+      </section>
+      <section class="l-wrapper -bg">
+        <div class="l-inner -sm">
+          <h3 class="c-title -sm -tac -gothic">フェア限定のスペシャル特典もございます</h3>
+          <img class="u-mt--s" src=" ./images/date.svg"
+            alt="2月フェア開催日 11日（木祝）、13（土）、14（日）、20（土）、21（日）、23（火祝）、27（土）、28（日）">
+          <h3 class="c-title -sm -tac -gothic u-mt--l">撮影日が<b class="accent">3/20</b>以降のお客様はこちら</h3>
+          <a class="p-special-sakura__banner u-mt--s" href="#sakura">
+            <h4 class=" p-special-sakura__banner__head">
+              <img src="./images/title-sakura.svg" alt="桜撮影の早割（今がチャンス！）">
+            </h4>
+            <div class="p-special-sakura__banner__body">
+              <dl class="p-special-sakura__price">
+                <dt class="title">シーズンアップ料金</dt>
+                <dd class="cont">
+                  <span class="price">20,000円</span>
+                  <img class="arrow" src="./images/ico-arrow.svg" alt="⇒">
+                  <span class="discount"><strong class="strong">0</strong>円</span>
+                </dd>
+              </dl>
+              <p class="c-link">詳しく見る</p>
+            </div>
+          </a>
+
+
+        </div>
+      </section>
+      <section class="l-wrapper">
+        <div class="l-inner">
+          <div class="p-special-winter__gift-title">
+            <h2 class="c-title -lg -tac">
+              <small class="c-title__sub -md">Winter Campaign</small>
+              <strong class="p-special-winter__second-title">選べる<br><b class="big">10</b>大特典プレゼント</strong>
+            </h2>
+          </div>
+
+
+          <div class="u-mt--l">
+            <p class="c-text -tac">
+              各店オリジナルの<br>
+              選べる10大特典をご用意しています。<br>
+              内容は店舗により異なりますので<br>
+              詳しくは店舗スタッフまでお問い合わせください。
+            </p>
+          </div>
+          <p class="c-text -sm u-mt--l">※2月末までにご成約＆3/21までの撮影で全データ購入されるお客様が対象となります</p>
+
+          <div class="u-mt--l">
+            <ol class="l-grid -col2 -gap c-card-wrapper">
+              <li class="c-card -number">
+                <figure class="c-card__image">
+                  <img src="./images/special_c_01.jpg" alt="">
+                </figure>
+                <p class="c-card__text">ご両家プレゼント<br>台紙写真2冊</p>
+              </li>
+              <li class="c-card -number">
+                <figure class="c-card__image">
+                  <img src="./images/special_c_02.jpg" alt="">
+                </figure>
+                <p class="c-card__text">式でもお家にも飾れる<br>可愛いフォトボード</p>
+              </li>
+              <li class="c-card -number">
+                <figure class="c-card__image">
+                  <img src="./images/special_c_03.jpg" alt="">
+                </figure>
+                <p class="c-card__text">大人気！ドライフラワーの<br>ヘアアクセサリー無料</p>
+              </li>
+              <li class="c-card -number">
+                <figure class="c-card__image">
+                  <img src="./images/special_c_04.jpg" alt="">
+                </figure>
+                <p class="c-card__text">NYブランド<br>アクセサリー無料</p>
+              </li>
+              <li class="c-card -number">
+                <figure class="c-card__image">
+                  <img src="./images/special_c_05.jpg" alt="">
+                </figure>
+                <p class="c-card__text"><small class="c-text -sm">【ロケーション撮影の方】</small><br>スタジオ1カットプレゼント</p>
+              </li>
+              <li class="c-card -number">
+                <figure class="c-card__image">
+                  <img src="./images/special_c_06.jpg" alt="">
+                </figure>
+                <p class="c-card__text"><small class="c-text -sm">【スタジオ撮影/色打掛の方】</small><br>白無垢1カットプレゼント</p>
+              </li>
+              <li class="c-card -number">
+                <figure class="c-card__image">
+                  <img src="./images/dummy.png" alt="">
+                </figure>
+                <p class="c-card__text">07が入ります</p>
+              </li>
+              <li class="c-card -number">
+                <figure class="c-card__image">
+                  <img src="./images/dummy.png" alt="">
+                </figure>
+                <p class="c-card__text">08が入ります</p>
+              </li>
+              <li class="c-card -number">
+                <figure class="c-card__image">
+                  <img src="./images/dummy.png" alt="">
+                </figure>
+                <p class="c-card__text">09が入ります</p>
+              </li>
+              <li class="c-card -number">
+                <figure class="c-card__image">
+                  <img src="./images/dummy.png" alt="">
+                </figure>
+                <p class="c-card__text">10が入ります</p>
+              </li>
+            </ol>
+            <div
+              style="background-color:#BEBEBE;display: flex;justify-content: center;align-items: center;margin-top:20px;padding:50px 10px;">
+              <p style="color:white;font-weight:bold;">※「オンライン相談OK」のコンテンツが入ります</p>
+            </div>
+            <div
+              style="background-color:#BEBEBE;display: flex;justify-content: center;align-items: center;margin-top:20px;padding:50px 10px;">
+              <p style="color:white;font-weight:bold;">※「NEW」のコンテンツが入ります</p>
+            </div>
+
+          </div>
+
+        </div>
+      </section>
+    </article>
+    <article class="p-special-sakura" id="sakura">
+      <div class="l-wrapper">
+        <div class="l-inner">
+          <h1 class="p-special-sakura__title"><img src="./images/title-sakura.svg" alt="桜撮影の早割（今がチャンス！）"></h1>
+          <div class="p-special-sakura__price">
+            <div class="cont">
+              <div>
+                <p class="title">シーズンアップ料金</p>
+                <div><small>通常価格</small><span class="price">20,000円</span></div>
+              </div>
+              <img class="arrow" src="./images/ico-arrow.svg" alt="⇒">
+              <span class="discount"><strong class="strong">0</strong>円</span>
+            </div>
+          </div>
+          <div class="l-inner u-mt--m">
+            <p class="c-text -sm">
+              ※2月末までにロケーションフォトプランご成約・全データご購入の方対象<br>
+              ※適用期間：3月20日（土）〜4月9日（金）まで
+            </p>
+          </div>
+        </div>
+        <figure class="p-special-sakura__image u-mt--l">
+          <img src="./images/sakura.jpg" alt="桜のフォトウエディング">
+        </figure>
+        <div class="l-inner">
+          <div class="c-box">
+            <p class="c-text">大人気・桜シーズンのロケーションフォトプランに早割が登場！
+              2月末までにご成約いただくと、早割適用でシーズンアップ料金が無料になります。</p>
+            <p class="c-text">穏やかな春の陽気と、枝いっぱいに美しく桜が咲くこのシーズンは前撮り、フォトウェディングにぴったり。</p>
+            <p class="c-text">結婚式を延期・中止された新郎新婦さまにもおすすめのロケーションフォトプランです。</p>
+          </div>
+        </div>
+        <p class="p-special-sakura__footer"><u>2月末まで</u>のお得なチャンスをお見逃しなく♪</p>
+      </div>
+    </article>
   </main>
 
 </body>
